managed to run the application on docker too